# redo

./: .gitignore  .travis.yml  LICENSE  README.md  Redofile  autogen.sh  bootstrap.sh  build.sh  configure.ac  default.do  env.do  print_dep.py
docs/: redo-always.1.ronn  redo-ifchange.1.ronn  redo-ifcreate.1.ronn  redo.1.ronn
src/: DSV.c  DSV.h  build.c  build.h  dbg.h  filepath.c  filepath.h  pcg.c  redo-always.c  redo-ifchange.c  redo-ifcreate.c  redo.c  sha1.c  sha1.h  util.c  util.h
test/: always.bats  always.do  always_test.do  args.bats  args_test.ext.do  fail.bats  fail.do  no-output.bats  no-output_result.do  test_helper.bash
tests/: all.do  include.sh  t0001-shebang.t  t0002-fail.t  t0010-check_args.t  t0100-redo.t
tests/a/: a.do  all.do
tests/a--b,a--c,b--c/: a.do  all.do
tests/a--b,a--c,b--d,c--d/: all.do  b.do  c.do  d.do
tests/a--c,b--c/: all.do  b.do  c.do
tests/a--c,b--c,c--d/: a.do  all.do
tests/always/: a.do  all.do
tests/args/: all.do
tests/args/d/: a.ext.do
tests/cwd/: a.do  all.do
tests/cwd/d/: b.do
tests/dependency-loop/: a.do  all.do  b.do
tests/fail/: all.do  fail.do
tests/ifcreate/: a.do  all.do
